--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
         if: ${{ github.ref == 'refs/heads/main' }}  # 注意填写main或者master
         with:
           personal_token: ${{ secrets.MY_PAT}} # 如果secret取了其他名称，将MY_PAT替换掉
-          external_repository: simumis/simumis.github.io # 填写远程仓库，不一定是这个格式，按照自己的情况写 
+          external_repository: 2718564960/2718564960.github.io # 填写远程仓库，不一定是这个格式，按照自己的情况写 
           publish_dir: ./public
           #cname: www.example.com        # 填写你的自定义域名。如果没有用自定义域名，注释掉这行
 
